--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<meta name="referrer" content="never">
+	<title>11知乎日报1</title>
+
 </head>
 <body>
 	<div id="app"></div>
-	<script src="./bundle.js"></script>
+	<script src="/bundle.js"></script>
 </body>
 </html>
